fix overflow of the mobile page

--- a/src/style.css
+++ b/src/style.css
@@ -69,9 +69,11 @@ button:focus-visible {
 }
 
 #app {
-	width: 100%;
+	width: 100vw;
 	height: 100vh;
 	margin: 0 auto;
+	padding: 0;
+	overflow-x: hidden;
 }
 
 @media (prefers-color-scheme: light) {
